--- a/package.json
+++ b/package.json
@@ -28,16 +28,17 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "4.11.0",
     "@prisma/cli": "2.6.2",
     "@prisma/client": "2.6.2",
     "blitz": "0.22.0",
+    "final-form": "4.20.1",
     "react": "0.0.0-experimental-7f28234f8",
     "react-dom": "0.0.0-experimental-7f28234f8",
     "react-error-boundary": "2.3.2",
+    "react-final-form": "6.5.1",
     "secure-password": "4.0.0",
-    "zod": "1.11.5",
-    "final-form": "4.20.1",
-    "react-final-form": "6.5.1"
+    "zod": "1.11.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.11.4",
