--- a/package.json
+++ b/package.json
@@ -28,11 +28,16 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/core": "0.8.0",
+    "@emotion/core": "10.0.35",
+    "@emotion/styled": "10.0.27",
     "@material-ui/core": "4.11.0",
     "@prisma/cli": "2.6.2",
     "@prisma/client": "2.6.2",
     "blitz": "0.22.0",
+    "emotion-theming": "10.0.27",
     "final-form": "4.20.1",
+    "node-sass": "4.14.1",
     "react": "0.0.0-experimental-7f28234f8",
     "react-dom": "0.0.0-experimental-7f28234f8",
     "react-error-boundary": "2.3.2",
